--- a/QuestionService.Api/QuestionService.Api.csproj
+++ b/QuestionService.Api/QuestionService.Api.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapper" Version="2.1.35" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
@@ -26,6 +27,10 @@
     <ItemGroup>
       <ProjectReference Include="..\Core\Contract\Contract.csproj" />
       <ProjectReference Include="..\Infrastructure\Persistence\Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models\" />
     </ItemGroup>
 
 </Project>
