--- a/QuestionService.Api/appsettings.json
+++ b/QuestionService.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "User ID=koffee;Password=koffee;Host=103.166.182.81;Port=5432;Database=question_service;Pooling=true;Minimum Pool Size=0;Maximum Pool Size=200;Timeout=60;Application Name=ExamBank"
   }
 }
